# zentone

./: .gitignore  CHANGELOG.md  Cargo.toml  GAIN-MAP-ARCHITECTURE.md  README.crates.md  README.md
.github/workflows/: ci.yml
benches/: pipeline_bench.rs  tonemap_bench.rs
benchmarks/: bt2446a_throughput_2026-06-20.md  cll_variance_flicker_2026-06-22.md  hdr_tone_map_reshoot_2446_2026-06-20.csv  hdr_tone_map_shootout_2026-06-20.md  hdr_tone_map_shootout_full_2026-06-20.csv  hdr_tone_map_shootout_full_2026-06-20.md  hdr_tone_map_shootout_full_2026-06-20_gainforge.csv  hdr_tone_map_shootout_full_2026-06-22.csv  hdr_tone_map_shootout_full_2026-06-22_v2.csv  hdr_tone_map_shootout_full_2026-06-22_v3_simd.csv  percentile_sweep_2026-06-22.csv  shootout_2026-06-22_findings.md  shootout_2026-06-22_findings_v2.md  shootout_color_audit_2026-06-22.md  shootout_p99999_2026-06-22.csv  shootout_p99999_vs_robust_2026-06-22.md  shootout_robust_2026-06-22.csv  simd_bench_2026-04-10.csv  softcompress_knee_findings_2026-06-23.md  softcompress_knee_sweep_2026-06-23.csv  zentone_simd_2026-04-26.csv  zentone_simd_2026-04-26_no-mask-alloc.csv  zentone_simd_2026-04-26_scratch.csv
benchmarks/_scripts/: analyze_shootout_2026-06-22.py  analyze_shootout_v2_2026-06-22.py  analyze_softcompress_knee_sweep.py
examples/: audit_primaries_dump.rs  bt2446a_throughput.rs  fit_pow_inv_24.rs  flicker_test_render.rs  gainmlp_roundtrip.rs  hdr_sdr_luminance_trace.rs  hdr_tone_map_reshoot_2446.rs  hdr_tone_map_shootout.rs  hdr_tone_map_shootout_audited.rs  hdr_tone_map_shootout_full.rs  hdr_tone_map_shootout_gainforge.rs  shootout_p99999_only.rs  softcompress_knee_sweep.rs  visual_compare.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_adaptive_fit.rs  fuzz_curves.rs  fuzz_filmic_params.rs  fuzz_profile_curve.rs  fuzz_streaming.rs
fuzz/regression/: fuzz_curves_extreme_reinhard_zentone21
reference-checks/: README.md  build.sh  darktable_filmic.cpp  libavif_apply_gain.cpp  libplacebo_bt2390.cpp  libultrahdr_apply_gain.cpp  libultrahdr_compute_gain.cpp  libultrahdr_gamut.cpp  libultrahdr_hlg_ootf.cpp  libultrahdr_luminance.cpp  libultrahdr_reinhard.cpp
reference-checks/golden/: darktable_filmic.csv  libavif_apply_gain.csv  libplacebo_bt2390.csv  libultrahdr_apply_gain.csv  libultrahdr_compute_gain.csv  libultrahdr_gamut.csv  libultrahdr_hlg_ootf.csv  libultrahdr_luminance.csv  libultrahdr_reinhard.csv
src/: bt2408.rs  bt2446a.rs  bt2446b.rs  bt2446c.rs  curves.rs  error.rs  filmic_spline.rs  gainmap.rs  gainmap_mlp.rs  gamut.rs  hdr_to_sdr.rs  hlg.rs  lib.rs  math.rs  pipeline.rs  scratch.rs  sdr_hdr.rs  tone_map.rs
src/experimental/: adaptive.rs  detect.rs  gain_map.rs  mod.rs  profile.rs  streaming.rs
src/simd/: blocks.rs  curves.rs  mod.rs
tests/: avif_roundtrip.rs  bruteforce_robustness.rs  bt2408_vs_bt2446a.rs  consumer_workflows.rs  continuity.rs  cross_reference.rs  endpoint_audit.rs  exhaustive_properties.rs  gainmap_mlp_integration.rs  gamut_hardening.rs  midgrey_brightness_trace.rs  negative_input.rs  pipeline_verification.rs  reference_parity.rs  sdr_preservation.rs  simd_parity.rs  transfer_functions.rs  zensim_regression.rs
tools/: train_gain_mlp.py
