[package]
name = "zentone"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "HDR to SDR tone mapping: classical curves (Reinhard, ACES, AgX, BT.2408, filmic), plus experimental adaptive and streaming tonemappers"
repository = "https://github.com/imazen/zentone"
documentation = "https://docs.rs/zentone"
readme = "README.md"
keywords = ["hdr", "tonemap", "bt2408", "agx", "image"]
categories = ["multimedia::images", "graphics", "no-std"]
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".github/",
    ".workongoing",
    "Cross.toml",
    "justfile",
    "fuzz/",
    "reference-checks/",
    "benchmarks/",
    "GAIN-MAP-ARCHITECTURE.md",
]

[lints.rust]
unexpected_cfgs = { level = "allow" }
unsafe_code = "forbid"
missing_docs = "warn"

[features]
default = ["std", "avx512"]
std = ["linear-srgb/std", "archmage/std", "magetypes/std"]
# AVX-512 tier for x86-64-v4 — gates the v4 magetypes path through to
# archmage/magetypes via their `avx512` features.
avx512 = ["archmage/avx512", "magetypes/avx512"]
# Experimental APIs: AdaptiveTonemapper, StreamingTonemapper, ProfileToneCurve,
# detect::*. Light test coverage; API and output may change without semver bumps
# until stabilized. (The ISO 21496-1 / Apple Ultra HDR gain-map splitter formerly
# gated here graduated to the always-available `gainmap` module.)
experimental = []
# Gain-MLP (Canham et al. 2025) per-pixel HDR reconstruction. Pulls
# in zenpredict for ZNPR v3 bake loading + MLP forward; otherwise zero
# zentone API surface depends on zenpredict.
gainmap-mlp = ["dep:zenpredict"]

[dependencies]
linear-srgb = { version = "0.6.12", default-features = false, features = ["transfer"] }
libm = { version = "0.2", default-features = false }
archmage = { version = "0.9.22", default-features = false, features = ["macros"] }
magetypes = { version = "0.9.22", default-features = false }
# Optional — feature-gated; supports no_std default. Path dep for now;
# flips to a published version once zenanalyze#77
# (FeatureTransform::Sinusoidal) lands on main and ships a release.
zenpredict = { path = "../zenanalyze--featuretransform-sinusoidal/zenpredict", default-features = false, optional = true }

[dev-dependencies]
gainforge = "0.4.1"
moxcms = "0.8.1"
image = { version = "0.25", default-features = false, features = ["png"] }
zensim = "0.2.6"
# Used by Gain-MLP integration tests to bake synthetic ZNPR v3 models
# directly (avoids needing a real trained bake on disk for unit-style
# testing). Path-dep to keep all the sinusoidal-branch code coherent.
zenpredict-bake = { path = "../zenanalyze--featuretransform-sinusoidal/zenpredict-bake", default-features = false }
# Cross-crate `'zmlp'` transport test: bake → AVIF muxer → AVIF parser
# → decoder produces byte-identical output. Path-deps until
# zenavif-serialize#2 and zenavif-parse#6 land + ship a release.
zenavif-serialize = { path = "../zenavif-serialize--gainmlp" }
zenavif-parse = { path = "../zenavif-parse--zmlp-extractor" }

# Native-only: benchmark dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
zenbench = { version = "0.1.6", features = ["criterion-compat"] }

[[example]]
name = "visual_compare"
required-features = ["experimental"]

[[bench]]
name = "tonemap_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
required-features = ["experimental"]
