[package]
name = "zentone"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "HDR to SDR tone mapping: classical curves (Reinhard, ACES, AgX, BT.2408, filmic), plus experimental adaptive and streaming tonemappers"
repository = "https://github.com/imazen/zentone"
documentation = "https://docs.rs/zentone"
readme = "README.md"
keywords = ["hdr", "tonemap", "bt2408", "agx", "image"]
categories = ["multimedia::images", "graphics", "no-std"]
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".github/",
    ".workongoing",
    ".gitignore",
    "Cross.toml",
    "justfile",
    "fuzz/",
    "reference-checks/",
    "benchmarks/",
    "GAIN-MAP-ARCHITECTURE.md",
    "tests/",
]

[lints.rust]
unexpected_cfgs = { level = "allow" }
unsafe_code = "forbid"
missing_docs = "warn"

[features]
default = ["std", "avx512"]
std = ["linear-srgb/std", "archmage/std", "magetypes/std"]
# AVX-512 tier for x86-64-v4 — gates the v4 magetypes path through to
# archmage/magetypes via their `avx512` features.
avx512 = ["archmage/avx512", "magetypes/avx512"]
# Experimental APIs: AdaptiveTonemapper, StreamingTonemapper, ProfileToneCurve,
# detect::*. Light test coverage; API and output may change without semver bumps
# until stabilized. (The ISO 21496-1 / Apple Ultra HDR gain-map splitter formerly
# gated here graduated to the always-available `gainmap` module.)
experimental = []
# Optional zenpixels integration: PixelSlice/PixelBuffer-level entry points
# (e.g. `gainmap::normalized_linear_to_hlg_buffer`) wrapping the dep-free
# `&mut [f32]` row kernels. The core stays container-agnostic.
zenpixels = ["dep:zenpixels"]
# Dev-only: pulls zencodecs + zenpixels-convert hdr-experimental to run the
# `hdr_tone_map_shootout` example against /mnt/v/input/gainmap-samples/.
# Not part of the published API surface.
hdr-shootout = []

[dependencies]
linear-srgb = { version = "0.6.12", default-features = false, features = ["transfer"] }
zenpixels = { version = "0.2.14", optional = true, default-features = false }
libm = { version = "0.2", default-features = false }
archmage = { version = "0.9.22", default-features = false, features = ["macros"] }
magetypes = { version = "0.9.22", default-features = false }

[dev-dependencies]
gainforge = "0.4.1"
moxcms = ">=0.8.1, <0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
zensim = "0.2.6"
# `hdr_tone_map_shootout` example needs UltraHDR decode + CllMeasure +
# strongly-typed PixelBuffer construction. These deps are dev-only so the
# `published` library remains slim.
anyhow = "1"
bytemuck = { version = "1.25", default-features = false }
zencodecs = { path = "../zenpipe/zencodecs", default-features = false, features = ["jpeg", "jpeg-ultrahdr", "avif-decode", "raw-decode", "raw-decode-gainmap", "std"] }
zenpixels-convert = { version = "0.2.15", default-features = false, features = ["std", "hdr-experimental", "rgb", "imgref"] }
zenpixels-dev = { package = "zenpixels", version = "0.2.15", default-features = false, features = ["std", "imgref"] }
# Manual AVIF gain-map reconstruction needs ultrahdr-core directly.
ultrahdr-core = { version = "0.5.0" }

# Native-only: benchmark dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
zenbench = { version = "0.1.6", features = ["criterion-compat"] }

[[example]]
name = "visual_compare"
required-features = ["experimental"]

[[example]]
name = "hdr_tone_map_shootout"
required-features = ["hdr-shootout"]

[[bench]]
name = "tonemap_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
required-features = ["experimental"]

# Cross-crate git overrides for the dev-only zencodecs/zenpixels(-convert) pull.
# Without these, cargo resolves crates.io versions that pre-date the
# `reconstruct_hdr` + `CllMeasure` APIs the example needs. The patches that
# would never get exercised by the gainmap example (heic, zenpng, zenrav1e,
# zenwebp, etc.) are intentionally omitted so cargo doesn't warn about
# "patch never used".
[patch.crates-io]
zenjpeg = { git = "https://github.com/imazen/zenjpeg" }
zencodec = { git = "https://github.com/imazen/zencodec" }
zenpixels = { git = "https://github.com/imazen/zenpixels" }
zenpixels-convert = { git = "https://github.com/imazen/zenpixels" }
ultrahdr-core = { git = "https://github.com/imazen/ultrahdr" }
rav1d-safe = { git = "https://github.com/imazen/rav1d-safe" }
