[package]
name = "zentone"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "HDR to SDR tone mapping curves: Hable, Narkowicz, ACES, AgX, Möbius (libplacebo), ITU BT.2408 / BT.2446-B / BT.2446-C, darktable filmic spline, plus an ISO 21496-1 / Ultra HDR gain-map splitter and experimental adaptive/streaming tonemappers"
repository = "https://github.com/imazen/zentone"
documentation = "https://docs.rs/zentone"
readme = "README.md"
keywords = ["hdr", "tonemap", "bt2408", "agx", "image"]
categories = ["multimedia::images", "graphics", "no-std"]
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".github/",
    ".workongoing",
    ".gitignore",
    "Cross.toml",
    "justfile",
    "fuzz/",
    "reference-checks/",
    "benchmarks/",
    "GAIN-MAP-ARCHITECTURE.md",
    "tests/",
]

[lints.rust]
unexpected_cfgs = { level = "allow" }
unsafe_code = "forbid"
missing_docs = "warn"

[features]
default = ["std", "avx512"]
std = ["linear-srgb/std", "archmage/std", "magetypes/std"]
# AVX-512 tier for x86-64-v4 — gates the v4 magetypes path through to
# archmage/magetypes via their `avx512` features.
avx512 = ["archmage/avx512", "magetypes/avx512"]
# Experimental APIs: AdaptiveTonemapper, StreamingTonemapper, ProfileToneCurve,
# detect::*. Light test coverage; API and output may change without semver bumps
# until stabilized. (The ISO 21496-1 / Apple Ultra HDR gain-map splitter formerly
# gated here graduated to the always-available `gainmap` module.)
experimental = []
# Optional zenpixels integration: PixelSlice/PixelBuffer-level entry points
# (e.g. `gainmap::normalized_linear_to_hlg_buffer`) wrapping the dep-free
# `&mut [f32]` row kernels. The core stays container-agnostic.
zenpixels = ["dep:zenpixels"]
# Dev-only: pulls zencodecs + zenpixels-convert hdr-experimental to run the
# `hdr_tone_map_shootout` example against /mnt/v/input/gainmap-samples/.
# Not part of the published API surface.
hdr-shootout = []
# Internal dev-only knob (NOT public API; the `__` prefix marks it as such):
# gates the offline `examples/fit_pow_inv_24.rs` polynomial-fitting tool.
# Polyfit itself is a dev-dep, so published binaries are unaffected; the
# feature exists only to keep the example off the normal `cargo test --examples`
# path. Run with `--features __polyfit-tools` to invoke.
__polyfit-tools = []

[dependencies]
linear-srgb = { version = "0.6.12", default-features = false, features = ["transfer"] }
zenpixels = { version = "0.2.14", optional = true, default-features = false }
libm = { version = "0.2", default-features = false }
archmage = { version = "0.9.22", default-features = false, features = ["macros"] }
magetypes = { version = "0.9.22", default-features = false }

[dev-dependencies]
gainforge = "0.5.0"
moxcms = ">=0.8.1, <0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
zensim = "0.2.6"
# Offline coefficient fitting for `examples/fit_pow_inv_24.rs`. Default features
# disabled — we only need `rational::RationalFit` + `ChebyshevFit`, not plotting
# or random transforms. Pulled in always for dev (no runtime impact on the
# published crate; dev-deps don't ship), gated on a feature only by the example.
polyfit = { path = "../../polyfit", default-features = false }
# `hdr_tone_map_shootout` example needs UltraHDR decode + CllMeasure +
# strongly-typed PixelBuffer construction. These deps are dev-only so the
# `published` library remains slim.
anyhow = "1"
bytemuck = { version = "1.25", default-features = false }
rayon = "1.10"
zencodecs = { path = "../zenpipe/zencodecs", default-features = false, features = ["jpeg", "jpeg-ultrahdr", "avif-decode", "heic-decode", "raw-decode", "raw-decode-gainmap", "std"] }
# dev-deps: the `hdr-shootout` example needs the unpublished `Bt2446A` +
# `hdr-experimental` feature gate that ships from the zenpixels repo on
# `main`. Path-only (no `version = ...`) so `cargo package` doesn't try to
# resolve them against crates.io — dev-deps without a version aren't
# emitted into the published manifest, so downstream consumers see no
# trace of these. The example only builds when `--features hdr-shootout`
# is set, so the normal `cargo test` / docs.rs build path is unaffected.
zenpixels-convert = { path = "../zenpixels/zenpixels-convert", default-features = false, features = ["std", "hdr-experimental", "rgb", "imgref"] }
zenpixels-dev = { package = "zenpixels", path = "../zenpixels/zenpixels", default-features = false, features = ["std", "imgref"] }
# Manual AVIF gain-map reconstruction needs ultrahdr-core directly.
ultrahdr-core = { version = "0.5.0" }

# Native-only: benchmark dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
zenbench = { version = "0.1.6", features = ["criterion-compat"] }

[[example]]
name = "visual_compare"
required-features = ["experimental"]

[[example]]
name = "fit_pow_inv_24"
required-features = ["__polyfit-tools"]

[[example]]
name = "hdr_tone_map_shootout"
required-features = ["hdr-shootout"]

[[example]]
name = "hdr_tone_map_shootout_full"
required-features = ["hdr-shootout"]

[[example]]
name = "hdr_tone_map_shootout_audited"
required-features = ["hdr-shootout"]

[[example]]
name = "shootout_p99999_only"
required-features = ["hdr-shootout"]

[[example]]
name = "hdr_tone_map_shootout_gainforge"
required-features = ["hdr-shootout"]

[[example]]
name = "hdr_sdr_luminance_trace"
required-features = ["hdr-shootout"]

[[example]]
name = "flicker_test_render"
required-features = ["hdr-shootout"]

[[example]]
name = "audit_primaries_dump"
required-features = ["hdr-shootout"]

[[bench]]
name = "tonemap_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
required-features = ["experimental"]

# Cross-crate git overrides for the dev-only `hdr-shootout` example pull.
# `zenpixels` and `zenpixels-convert` are now path deps in `[dev-dependencies]`
# so they don't need a patch entry. The remaining patches expose APIs the
# example needs that pre-date the latest crates.io publishes of the
# transitive `zencodecs` graph (`zenjpeg`, `ultrahdr-core`, `rav1d-safe`,
# `heic`). Patches never exercised by the example (zenpng, zenrav1e,
# zenwebp, etc.) are intentionally omitted so cargo doesn't warn about
# "patch never used".
[patch.crates-io]
zenjpeg = { git = "https://github.com/imazen/zenjpeg" }
ultrahdr-core = { git = "https://github.com/imazen/ultrahdr" }
rav1d-safe = { git = "https://github.com/imazen/rav1d-safe" }
heic = { git = "https://github.com/imazen/heic" }
